--- a/.env
+++ b/.env
@@ -1,12 +1,7 @@
 # Database
-DATABASE_URL=mysql://root:senha@localhost:3306/comunigov
-PGHOST=localhost
-PGPORT=3306
-PGUSER=root
-PGPASSWORD=Irlanda*2025
-PGDATABASE=comunigov
+#DATABASE_URL=mysql://loirar91_root:Irlanda*2025@localhost:3306/loirar91_comunigov
 
-MYSQL_HOST=localhost
+MYSQL_HOST=127.0.0.1
 MYSQL_USER=root
 MYSQL_PASSWORD=Irlanda*2025
 MYSQL_PORT=3306
