--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "drizzle:push": "drizzle-kit push"
+    "dev": "cross-env NODE_ENV=development tsx -r dotenv/config server/index.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -58,6 +55,7 @@
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
+    "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "googleapis": "^148.0.0",
@@ -95,7 +93,10 @@
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
-    "@tailwindcss/typography": "^0.5.15",   
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/connect-pg-simple": "^7.0.3",
+    "@types/express": "4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
